# books-db

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: merge.yml  release.yml  version_bump.yml
resources/: book_response_body.json  book_with_multiple_authors_and_optional_fields_response_body.json
src/: books.rs  db.rs  error.rs  isbn_db.rs  main.rs  models.rs
tests/: init.rs
