[package]
name = "books-db"
version = "0.1.0"
edition = "2021"
authors = ["Chris O'Neil <chriso83@protonmail.com>"]
repository = "https://github.com/jacderida/books-db"

[[bin]]
name = "books"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
dirs-next = "2.0.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[dev-dependencies]
assert_fs = "~1.0"
assert_cmd = "~2.0"
predicates = "~2.0"
