[package]
name = "books-db"
version = "0.1.0"
edition = "2021"
authors = ["Chris O'Neil <chriso83@protonmail.com>"]
repository = "https://github.com/jacderida/books-db"

[[bin]]
name = "books"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
dialoguer = "0.10.4"
dirs-next = "2.0.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
textwrap = "0.16.0"
thiserror = "1.0.23"
tokio = { version = "1.26", features = ["full"] }

[dev-dependencies]
assert_fs = "~1.0"
assert_cmd = "~2.0"
httpmock = "0.6"
predicates = "~2.0"
